--- a/Spoj.Solver/Solutions.resx
+++ b/Spoj.Solver/Solutions.resx
@@ -124,4 +124,7 @@
   <data name="TEST" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Solutions\1 - Settler\TEST.cs;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="ADDREV" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>solutions\2 - chieftain\addrev.cs;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
