--- a/Spoj.Solver/Solutions.resx
+++ b/Spoj.Solver/Solutions.resx
@@ -130,6 +130,9 @@
   <data name="ARMY" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>solutions\2 - chieftain\army.cs;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="NSTEPS" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>solutions\2 - chieftain\nsteps.cs;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="QUADAREA" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>solutions\2 - chieftain\quadarea.cs;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
