--- a/Spoj.Solver/Solutions.resx
+++ b/Spoj.Solver/Solutions.resx
@@ -136,4 +136,7 @@
   <data name="QUADAREA" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>solutions\2 - chieftain\quadarea.cs;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="ABSYS" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>solutions\3 - warlord\absys.cs;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
 </root>
